# word-checker

./: CMakeLists.txt  main.c
